# photospline

./: .gitmodules  CMakeLists.txt  COPYING.txt  README.md  renovate.json
.github/workflows/: ci.yml
cmake/: SuiteSparse_config.mk.diff  package.cmake  photospline-config.in  photosplineConfig.cmake.in
docs/: CMakeLists.txt  conf.py.in  doxyfile.in
docs/source/: conf.py  index.rst
examples/: fitting_example.cpp  shared_memory_example.cpp
include/photospline/: bivariate.h  bivariatespline.h  bspline-mod.h  bspline.h  splinetable-mod.h  splinetable.h
include/photospline/cinter/: splinetable.h
include/photospline/detail/: aux.h  bspline_eval.h  bspline_multi.h  config.h.in  convolve.h  fit.h  fitsio.h  glam.h  grideval.h  permute.h  sample.h  simd.h  splineutil.h
src/cinter/: splinetable.cpp
src/core/: bivariatespline.cpp  bspline.cpp  bspline_multi.cpp  convolve.cpp  fitsio.cpp
src/fitter/: cholesky_solve.c  cholesky_solve.h  glam.c  glam.orig.c  nnls.c  pyglam.c  splineutil.c
src/python/: photospline.pyi  photosplinemodule.c  photosplinemodule.cpp  spglammodule.c
src/tools/: bench.cpp  eval.cpp  gen_test_splines.cpp  inspect.cpp
test/: test.h  test_eval.cpp  test_eval.py  test_fit.cpp  test_fit.py  test_fitsio.cpp  test_main.cpp  test_nnls.py  test_operators.cpp  test_pickle.py  test_stack.py
test/test_data/: GaisserH4a_atmod12_DPMJET.single_energy.fits  test_spline_1d.fits  test_spline_1d_nco.fits  test_spline_2d.fits  test_spline_2d_nco.fits  test_spline_3d.fits  test_spline_3d_nco.fits  test_spline_4d.fits  test_spline_4d_nco.fits  test_spline_5d.fits  test_spline_5d_nco.fits
typings/: photospline.pyi
typings/photospline-stubs/: __init__.pyi
